# llm-decision-making-workshop

./: .env.example  .gitignore  LICENSE  README.md  command_sender.py  main.py  pyproject.toml
llm_workshop/: arduino-control.ino  command_sender.py  main.py
