[tool.poetry]
name = "llm-workshop"
version = "0.1.0"
description = ""
authors = ["Nicholas Tindle <nicholas.tindle@agpt.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
anthropic = "^0.34.1"
pyautogui = "^0.9.54"
opencv-python = "^4.10.0.84"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
